org.emftext.language.feature.resource.feature/src/org/emftext/language/feature/resource/feature/FeatureParser.java
// $ANTLR 3.1.1 C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g 2009-04-11 19:18:23

	package org.emftext.language.feature.resource.feature;
	
	import org.eclipse.emf.ecore.EObject;
	import org.eclipse.emf.ecore.InternalEObject;
	import org.eclipse.emf.common.util.URI;
	import org.emftext.runtime.resource.impl.AbstractEMFTextParser;
	import org.emftext.runtime.IOptions;
	import org.emftext.runtime.resource.impl.UnexpectedContentTypeException;
	import org.eclipse.emf.ecore.EClass;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class FeatureParser extends AbstractEMFTextParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "QUOTED_34_34", "TEXT", "INTEGER", "COMMENT", "FLOAT", "WHITESPACE", "LINEBREAK", "'FeatureModel'", "'{'", "'constraints'", "';'", "'}'", "'Constraint'", "':'", "'Feature'", "'('", "'..'", "')'", "'['", "']'", "'Group'", "'='"
    };
    public static final int T__12=12;
    public static final int T__23=23;
    public static final int T__20=20;
    public static final int T__13=13;
    public static final int FLOAT=8;
    public static final int T__21=21;
    public static final int COMMENT=7;
    public static final int T__19=19;
    public static final int T__14=14;
    public static final int T__11=11;
    public static final int T__22=22;
    public static final int WHITESPACE=9;
    public static final int INTEGER=6;
    public static final int T__17=17;
    public static final int EOF=-1;
    public static final int T__16=16;
    public static final int TEXT=5;
    public static final int T__24=24;
    public static final int LINEBREAK=10;
    public static final int T__25=25;
    public static final int T__18=18;
    public static final int T__15=15;
    public static final int QUOTED_34_34=4;

    // delegates
    // delegators


        public FeatureParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public FeatureParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[16+1];
             
             
        }
        

    public String[] getTokenNames() { return FeatureParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g"; }


    	private org.emftext.runtime.resource.ITokenResolverFactory tokenResolverFactory = new FeatureTokenResolverFactory();
    	private int lastPosition;
    	private org.emftext.runtime.resource.impl.TokenResolveResult tokenResolveResult = new org.emftext.runtime.resource.impl.TokenResolveResult();
    	
    	// This default constructor is only used to call createInstance() on it
    	public FeatureParser() {
    		super();
    	}
    	
    	protected EObject doParse() throws RecognitionException {
    		lastPosition = 0;
    		((FeatureLexer)getTokenStream().getTokenSource()).lexerExceptions = lexerExceptions;
    		((FeatureLexer)getTokenStream().getTokenSource()).lexerExceptionsPosition = lexerExceptionsPosition;
    		Object typeObject = null;
    		Map<?,?> options = getOptions();
    		if (options != null) {
    			typeObject = options.get(IOptions.RESOURCE_CONTENT_TYPE);
    		}
    		if (typeObject == null) {
    			return start();
    		} else if (typeObject instanceof EClass) {
    			EClass type = (EClass)typeObject;
    			if (type.getInstanceClass() == org.featuremapper.models.feature.FeatureModel.class) {
    				return featuremodel();
    			}
    			if (type.getInstanceClass() == org.featuremapper.models.feature.Constraint.class) {
    				return constraint();
    			}
    			if (type.getInstanceClass() == org.featuremapper.models.feature.Feature.class) {
    				return feature();
    			}
    			if (type.getInstanceClass() == org.featuremapper.models.feature.Group.class) {
    				return group();
    			}
    			if (type.getInstanceClass() == org.featuremapper.models.feature.Attribute.class) {
    				return attribute();
    			}
    		}
    		throw new org.emftext.runtime.resource.impl.UnexpectedContentTypeException(typeObject);
    	}
    	
    	@SuppressWarnings("unchecked")
    	private boolean addObjectToList(org.eclipse.emf.ecore.EObject element, int featureID, java.lang.Object proxy) {
    		return ((java.util.List<java.lang.Object>) element.eGet(element.eClass().getEStructuralFeature(featureID))).add(proxy);
    	}
    	
    	private org.emftext.runtime.resource.impl.TokenResolveResult getFreshTokenResolveResult() {
    		tokenResolveResult.clear();
    		return tokenResolveResult;
    	}
    	
    	protected void collectHiddenTokens(org.eclipse.emf.ecore.EObject element) {
    	}
    	public org.emftext.runtime.resource.ITextParser createInstance(java.io.InputStream actualInputStream, java.lang.String encoding) {
    		try {
    			if (encoding == null) {
    				return new FeatureParser(new org.antlr.runtime.CommonTokenStream(new FeatureLexer(new org.antlr.runtime.ANTLRInputStream(actualInputStream))));
    			} else {
    				return new FeatureParser(new org.antlr.runtime.CommonTokenStream(new FeatureLexer(new org.antlr.runtime.ANTLRInputStream(actualInputStream, encoding))));
    			}
    		} catch (java.io.IOException e) {
    			org.emftext.runtime.EMFTextRuntimePlugin.logError("Error while creating parser.", e);
    			return null;
    		}
    	}



    // $ANTLR start "start"
    // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:102:1: start returns [ EObject element = null] : (c0= featuremodel ) EOF ;
    public final EObject start() throws RecognitionException {
        EObject element =  null;
        int start_StartIndex = input.index();
        org.featuremapper.models.feature.FeatureModel c0 = null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return element; }
            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:103:1: ( (c0= featuremodel ) EOF )
            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:104:2: (c0= featuremodel ) EOF
            {
            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:104:2: (c0= featuremodel )
            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:105:3: c0= featuremodel
            {
            pushFollow(FOLLOW_featuremodel_in_start79);
            c0=featuremodel();

            state._fsp--;
            if (state.failed) return element;
            if ( state.backtracking==0 ) {
               element = c0; 
            }

            }

            match(input,EOF,FOLLOW_EOF_in_start86); if (state.failed) return element;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, start_StartIndex); }
        }
        return element;
    }
    // $ANTLR end "start"


    // $ANTLR start "featuremodel"
    // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:110:1: featuremodel returns [org.featuremapper.models.feature.FeatureModel element = null] : a0= 'FeatureModel' (a1= QUOTED_34_34 ) ( (a2= '{' a3= 'constraints' ( ( (a4_0= constraint ) a5= ';' ) )? a6= '}' ) )? (a7_0= feature ) ;
    public final org.featuremapper.models.feature.FeatureModel featuremodel() throws RecognitionException {
        org.featuremapper.models.feature.FeatureModel element =  null;
        int featuremodel_StartIndex = input.index();
        Token a0=null;
        Token a1=null;
        Token a2=null;
        Token a3=null;
        Token a5=null;
        Token a6=null;
        org.featuremapper.models.feature.Constraint a4_0 = null;

        org.featuremapper.models.feature.Feature a7_0 = null;




        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return element; }
            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:113:1: (a0= 'FeatureModel' (a1= QUOTED_34_34 ) ( (a2= '{' a3= 'constraints' ( ( (a4_0= constraint ) a5= ';' ) )? a6= '}' ) )? (a7_0= feature ) )
            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:114:2: a0= 'FeatureModel' (a1= QUOTED_34_34 ) ( (a2= '{' a3= 'constraints' ( ( (a4_0= constraint ) a5= ';' ) )? a6= '}' ) )? (a7_0= feature )
            {
            a0=(Token)match(input,11,FOLLOW_11_in_featuremodel109); if (state.failed) return element;
            if ( state.backtracking==0 ) {

              		if (element == null) {
              			element = org.featuremapper.models.feature.FeatureFactory.eINSTANCE.createFeatureModel();
              		}
              		collectHiddenTokens(element);
              		copyLocalizationInfos((CommonToken)a0, element);
              	
            }
            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:122:2: (a1= QUOTED_34_34 )
            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:123:3: a1= QUOTED_34_34
            {
            a1=(Token)match(input,QUOTED_34_34,FOLLOW_QUOTED_34_34_in_featuremodel124); if (state.failed) return element;
            if ( state.backtracking==0 ) {

              			if (element == null) {
              				element = org.featuremapper.models.feature.FeatureFactory.eINSTANCE.createFeatureModel();
              			}
              			org.emftext.runtime.resource.ITokenResolver tokenResolver = tokenResolverFactory.createTokenResolver("QUOTED_34_34");
              			tokenResolver.setOptions(getOptions());
              			org.emftext.runtime.resource.ITokenResolveResult result = getFreshTokenResolveResult();
              			tokenResolver.resolve(a1.getText(), element.eClass().getEStructuralFeature(org.featuremapper.models.feature.FeaturePackage.FEATURE_MODEL__NAME), result);
              			Object resolvedObject = result.getResolvedToken();
              			if (resolvedObject == null) {
              				getResource().addError(result.getErrorMessage(), ((CommonToken) a1).getLine(), ((CommonToken) a1).getCharPositionInLine(), ((CommonToken) a1).getStartIndex(), ((CommonToken) a1).getStopIndex());
              			}
              			java.lang.String resolved = (java.lang.String)resolvedObject;
              			if (resolved != null) {
              				element.eSet(element.eClass().getEStructuralFeature(org.featuremapper.models.feature.FeaturePackage.FEATURE_MODEL__NAME), resolved);
              			}
              			collectHiddenTokens(element);
              			copyLocalizationInfos((CommonToken) a1, element);
              		
            }

            }

            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:145:2: ( (a2= '{' a3= 'constraints' ( ( (a4_0= constraint ) a5= ';' ) )? a6= '}' ) )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==12) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:146:3: (a2= '{' a3= 'constraints' ( ( (a4_0= constraint ) a5= ';' ) )? a6= '}' )
                    {
                    // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:146:3: (a2= '{' a3= 'constraints' ( ( (a4_0= constraint ) a5= ';' ) )? a6= '}' )
                    // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:147:4: a2= '{' a3= 'constraints' ( ( (a4_0= constraint ) a5= ';' ) )? a6= '}'
                    {
                    a2=(Token)match(input,12,FOLLOW_12_in_featuremodel151); if (state.failed) return element;
                    if ( state.backtracking==0 ) {

                      				if (element == null) {
                      					element = org.featuremapper.models.feature.FeatureFactory.eINSTANCE.createFeatureModel();
                      				}
                      				collectHiddenTokens(element);
                      				copyLocalizationInfos((CommonToken)a2, element);
                      			
                    }
                    a3=(Token)match(input,13,FOLLOW_13_in_featuremodel166); if (state.failed) return element;
                    if ( state.backtracking==0 ) {

                      				if (element == null) {
                      					element = org.featuremapper.models.feature.FeatureFactory.eINSTANCE.createFeatureModel();
                      				}
                      				collectHiddenTokens(element);
                      				copyLocalizationInfos((CommonToken)a3, element);
                      			
                    }
                    // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:163:4: ( ( (a4_0= constraint ) a5= ';' ) )?
                    int alt1=2;
                    int LA1_0 = input.LA(1);

                    if ( (LA1_0==16) ) {
                        alt1=1;
                    }
                    switch (alt1) {
                        case 1 :
                            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:164:5: ( (a4_0= constraint ) a5= ';' )
                            {
                            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:164:5: ( (a4_0= constraint ) a5= ';' )
                            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:165:6: (a4_0= constraint ) a5= ';'
                            {
                            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:165:6: (a4_0= constraint )
                            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:166:7: a4_0= constraint
                            {
                            pushFollow(FOLLOW_constraint_in_featuremodel202);
                            a4_0=constraint();

                            state._fsp--;
                            if (state.failed) return element;
                            if ( state.backtracking==0 ) {

                              							if (element == null) {
                              								element = org.featuremapper.models.feature.FeatureFactory.eINSTANCE.createFeatureModel();
                              							}
                              							if (a4_0 != null) {
                              								addObjectToList(element, org.featuremapper.models.feature.FeaturePackage.FEATURE_MODEL__CONSTRAINTS, a4_0);
                              							}
                              							collectHiddenTokens(element);
                              							copyLocalizationInfos(a4_0, element); 						
                            }

                            }

                            a5=(Token)match(input,14,FOLLOW_14_in_featuremodel233); if (state.failed) return element;
                            if ( state.backtracking==0 ) {

                              						if (element == null) {
                              							element = org.featuremapper.models.feature.FeatureFactory.eINSTANCE.createFeatureModel();
                              						}
                              						collectHiddenTokens(element);
                              						copyLocalizationInfos((CommonToken)a5, element);
                              					
                            }

                            }


                            }
                            break;

                    }

                    a6=(Token)match(input,15,FOLLOW_15_in_featuremodel270); if (state.failed) return element;
                    if ( state.backtracking==0 ) {

                      				if (element == null) {
                      					element = org.featuremapper.models.feature.FeatureFactory.eINSTANCE.createFeatureModel();
                      				}
                      				collectHiddenTokens(element);
                      				copyLocalizationInfos((CommonToken)a6, element);
                      			
                    }

                    }


                    }
                    break;

            }

            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:199:2: (a7_0= feature )
            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:200:3: a7_0= feature
            {
            pushFollow(FOLLOW_feature_in_featuremodel299);
            a7_0=feature();

            state._fsp--;
            if (state.failed) return element;
            if ( state.backtracking==0 ) {

              			if (element == null) {
              				element = org.featuremapper.models.feature.FeatureFactory.eINSTANCE.createFeatureModel();
              			}
              			if (a7_0 != null) {
              				element.eSet(element.eClass().getEStructuralFeature(org.featuremapper.models.feature.FeaturePackage.FEATURE_MODEL__ROOT), a7_0);
              			}
              			collectHiddenTokens(element);
              			copyLocalizationInfos(a7_0, element); 		
            }

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, featuremodel_StartIndex); }
        }
        return element;
    }
    // $ANTLR end "featuremodel"


    // $ANTLR start "constraint"
    // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:213:1: constraint returns [org.featuremapper.models.feature.Constraint element = null] : a0= 'Constraint' (a1= TEXT ) a2= ':' (a3= QUOTED_34_34 ) ;
    public final org.featuremapper.models.feature.Constraint constraint() throws RecognitionException {
        org.featuremapper.models.feature.Constraint element =  null;
        int constraint_StartIndex = input.index();
        Token a0=null;
        Token a1=null;
        Token a2=null;
        Token a3=null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return element; }
            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:216:1: (a0= 'Constraint' (a1= TEXT ) a2= ':' (a3= QUOTED_34_34 ) )
            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:217:2: a0= 'Constraint' (a1= TEXT ) a2= ':' (a3= QUOTED_34_34 )
            {
            a0=(Token)match(input,16,FOLLOW_16_in_constraint329); if (state.failed) return element;
            if ( state.backtracking==0 ) {

              		if (element == null) {
              			element = org.featuremapper.models.feature.FeatureFactory.eINSTANCE.createConstraint();
              		}
              		collectHiddenTokens(element);
              		copyLocalizationInfos((CommonToken)a0, element);
              	
            }
            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:225:2: (a1= TEXT )
            // C:\\Projekte\\Eclipse-Workspaces\\EMFText-ANT\\org.emftext.language.feature.resource.feature\\src\\org\\emftext\\language\\feature\\resource\\feature\\Feature.g:226:3: a1= TEXT
            {
            a1=(Token)match(input,TEXT,FOLLOW_TEXT_in_constraint344); if (state.failed) return element;
            if ( state.backtracking==0 ) {

              			if (element == null) {
              				element = org.featuremapper.models.feature.FeatureFactory.eINSTANCE.createConstraint();
              			}
